--- a/app/src/main/res/layout/activity_applied_candidates.xml
+++ b/app/src/main/res/layout/activity_applied_candidates.xml
@@ -36,7 +36,7 @@
                 android:src="@mipmap/angle_arrow_back"/>
 
             <com.eleganzit.amigo.utils.TextViewRobotoBold
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#ffffff"
