--- a/app/src/main/res/layout/donation_layout.xml
+++ b/app/src/main/res/layout/donation_layout.xml
@@ -182,7 +182,7 @@
         android:paddingTop="6dp"
         android:paddingRight="20dp"
         android:textSize="10sp"
-        android:text="DONATE NOW"
+        android:text="VIEW DONATION DETAILS"
         android:background="@drawable/donate_button_bg"
         android:textColor="#ffffff"
         android:layout_centerInParent="true"
