--- a/app/src/main/res/drawable/rounded_light_blue_bg.xml
+++ b/app/src/main/res/drawable/rounded_light_blue_bg.xml
@@ -6,5 +6,5 @@
         android:bottomRightRadius="4dp"
         android:topLeftRadius="4dp"
         android:topRightRadius="4dp" />
-    <solid android:color="@color/colorPrimaryDark" />
+    <solid android:color="@color/appGreen" />
 </shape>
